docker compose file updated

--- a/Source/CDR.Register.Admin.API/appsettings.Release.json
+++ b/Source/CDR.Register.Admin.API/appsettings.Release.json
@@ -77,5 +77,5 @@
       }
     ]
   },
-  "IdentityServerTokenUri": "https://mock-register:7001/idp/connect/token"
+  "IdentityServerTokenUri": "https://accc.dev.cuscal.com.au:7001/idp/connect/token"
 }
