--- a/Source/CDR.Register.IntegrationTests/appsettings.Release.json
+++ b/Source/CDR.Register.IntegrationTests/appsettings.Release.json
@@ -2,7 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=mssql;Database=cdr-register;User Id='SA';Password='Pa{}w0rd2019';MultipleActiveResultSets=True"
   },
-  "TLS_BaseURL": "https://mock-register:7000",
-  "MTLS_BaseURL": "https://mock-register:7001",
-  "Admin_BaseURL": "https://mock-register:7006"
+  "TLS_BaseURL": "https://accc.dev.cuscal.com.au:7000",
+  "MTLS_BaseURL": "https://accc.dev.cuscal.com.au:7001",
+  "Admin_BaseURL": "https://accc.dev.cuscal.com.au:7006"
 }
