Updated as per Cuscal requirements

--- a/Source/CDR.Register.API.Gateway.TLS/appsettings.Container.json
+++ b/Source/CDR.Register.API.Gateway.TLS/appsettings.Container.json
@@ -5,7 +5,7 @@
   },
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
-    "MinimumLevel": "Debug",
+    "MinimumLevel": "Warning",
     "WriteTo": [
       { "Name": "Console" },
       {
@@ -20,7 +20,7 @@
             "tableName": "LogEvents-Gateway-TLS",
             "autoCreateSqlTable": true
           },
-          "restrictedToMinimumLevel": "Verbose",
+          "restrictedToMinimumLevel": "Warning",
           "batchPostingLimit": 1000,
           "period": "0.00:00:10",
           "columnOptionsSection": {
