--- a/Source/CDR.Register.API.Gateway.mTLS/appsettings.Development.json
+++ b/Source/CDR.Register.API.Gateway.mTLS/appsettings.Development.json
@@ -5,7 +5,7 @@
   },
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File", "Serilog.Sinks.MSSqlServer" ],
-    "MinimumLevel": "Debug",
+    "MinimumLevel": "Warning",
     "WriteTo": [
       {
         "Name": "Console",
@@ -28,7 +28,7 @@
             "tableName": "LogEvents-Gateway-mTLS",
             "autoCreateSqlTable": true
           },
-          "restrictedToMinimumLevel": "Verbose",
+          "restrictedToMinimumLevel": "Warning",
           "batchPostingLimit": 1000,
           "period": "0.00:00:10",
           "columnOptionsSection": {
