--- a/Source/CDR.Register.Admin.API/appsettings.Container.json
+++ b/Source/CDR.Register.Admin.API/appsettings.Container.json
@@ -9,7 +9,7 @@
   },
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File", "Serilog.Sinks.MSSqlServer" ],
-    "MinimumLevel": "Debug",
+    "MinimumLevel": "Warning",
     "WriteTo": [
       {
         "Name": "Console"
