--- a/Source/CDR.Register.Discovery.API/appsettings.Container.json
+++ b/Source/CDR.Register.Discovery.API/appsettings.Container.json
@@ -6,7 +6,7 @@
   },
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File", "Serilog.Sinks.MSSqlServer" ],
-    "MinimumLevel": "Debug",
+    "MinimumLevel": "Warning",
     "WriteTo": [
       {
         "Name": "Console",
@@ -29,7 +29,7 @@
             "tableName": "LogEvents-Discovery-API",
             "autoCreateSqlTable": true
           },
-          "restrictedToMinimumLevel": "Verbose",
+          "restrictedToMinimumLevel": "Warning",
           "batchPostingLimit": 1000,
           "period": "0.00:00:10",
           "columnOptionsSection": {
@@ -82,7 +82,7 @@
   },
     "SerilogRequestResponseLogger": {
         "Using": [ "Serilog.Sinks.MSSqlServer" ],
-        "MinimumLevel": "Debug",
+        "MinimumLevel": "Warning",
         "IPAddressHeaderKey": "X-Forwarded-For",
         "HostNameHeaderKey": "X-Forwarded-Host",
         "WriteTo": [
@@ -94,7 +94,7 @@
                         "tableName": "LogEvents-RequestResponse",
                         "autoCreateSqlTable": true
                     },
-                    "restrictedToMinimumLevel": "Debug",
+                    "restrictedToMinimumLevel": "Warning",
                     "batchPostingLimit": 1000,
                     "period": "0.00:00:10",
                     "columnOptionsSection": {
