--- a/Source/CDR.Register.Status.API/appsettings.Container.json
+++ b/Source/CDR.Register.Status.API/appsettings.Container.json
@@ -6,7 +6,7 @@
   },
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
-    "MinimumLevel": "Debug",
+    "MinimumLevel": "Warning",
     "WriteTo": [
       { "Name": "Console" },
       {
@@ -74,7 +74,7 @@
   },
     "SerilogRequestResponseLogger": {
         "Using": [ "Serilog.Sinks.MSSqlServer" ],
-        "MinimumLevel": "Debug",
+        "MinimumLevel": "Warning",
         "IPAddressHeaderKey": "X-Forwarded-For",
         "HostNameHeaderKey": "X-Forwarded-Host",
         "WriteTo": [
@@ -86,7 +86,7 @@
                         "tableName": "LogEvents-RequestResponse",
                         "autoCreateSqlTable": true
                     },
-                    "restrictedToMinimumLevel": "Debug",
+                    "restrictedToMinimumLevel": "Warning",
                     "batchPostingLimit": 1000,
                     "period": "0.00:00:10",
                     "columnOptionsSection": {
