--- a/Source/CDR.Register.Admin.API/appsettings.Release.json
+++ b/Source/CDR.Register.Admin.API/appsettings.Release.json
@@ -9,7 +9,7 @@
   },
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File", "Serilog.Sinks.MSSqlServer" ],
-    "MinimumLevel": "Debug",
+    "MinimumLevel": "Warning",
     "WriteTo": [
       {
         "Name": "Console"
@@ -26,7 +26,7 @@
             "tableName": "LogEvents-Admin-API",
             "autoCreateSqlTable": true
           },
-          "restrictedToMinimumLevel": "Verbose",
+          "restrictedToMinimumLevel": "Warning",
           "batchPostingLimit": 1000,
           "period": "0.00:00:10",
           "columnOptionsSection": {
