--- a/Source/CDR.Register.Admin.API/appsettings.Release.json
+++ b/Source/CDR.Register.Admin.API/appsettings.Release.json
@@ -5,7 +5,7 @@
   },
   "SeedData": {
     "FilePath": "Data/seed-data.Release.json",
-    "OverwriteExistingData": true
+    "OverwriteExistingData": false
   },
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File", "Serilog.Sinks.MSSqlServer" ],
