--- a/Source/docker-compose.Ecosystem.yml
+++ b/Source/docker-compose.Ecosystem.yml
@@ -26,6 +26,11 @@ services:
     depends_on:
       mssql:
         condition: service_healthy
+    logging:
+        driver: "json-file"
+        options:
+         max-size: "5M"
+         max-file: 10
   mssql:
     container_name: sql1
     image: 'mcr.microsoft.com/mssql/server:2019-latest'
@@ -38,4 +43,9 @@ services:
       test: /opt/mssql-tools/bin/sqlcmd -S . -U sa -P "Pa{}w0rd2019" -Q "SELECT 1" || exit 1 
       timeout: 10s
       interval: 10s
-      retries: 10    
+      retries: 10
+    logging:
+        driver: "json-file"
+        options:
+         max-size: "5M"
+         max-file: 10
